javadoc Articolo